<resources>
    <string name="app_name">Speak for yourself</string>

    <string name="editText_Sentence_Hint">Write the sentence here</string>
    <string name="textView_QuickSettings_Volume">Volume</string>
    <string name="textView_QuickSettings_Language">Language</string>
    <string name="textView_QuickSettings_Speed">Speed</string>
    <string name="textView_QuickSettings_Pitch">Pitch</string>
    <string name="textView_QuickSettings_TalkMode">Talk mode</string>
    <string name="textView_QuickSettings_TalkMode_Description">Delete the text when \"Enter\" is pressed</string>
    <string name="textView_QuickSettings__MoreSettings">More settings</string>
    <string name="textView_QuickSettings_Voice">Voice</string>
    <string name="textView_Settings_Theme">Theme</string>
    <string name="button_Settings_Test">Test</string>
    <string name="button_Settings_Reset">Reset</string>
    <string name="button_Settings_ClearHistory">Clear history</string>
    <string name="button_Settings_ClearSavecSentences">Clear saved sentences</string>
    <string name="settings">Settings</string>
    <string name="settings_TestSentence">Hello, how are you ?</string>
    <string name="alertDialog_DeleteHistoryQuestion">Do you really want to clear the history ? ( This action can\'t be undone )</string>
    <string name="alertDialog_OK">OK</string>
    <string name="alertDialog_Cancel">Cancel</string>
    <string name="alertDialog_DeleteSavedSentencesQuestion">Do you really want to clear the saved sentences ? ( This action can\'t be undone )</string>
    <string name="button_PopupWindow_Delete">Delete the sentence</string>
    <string name="button_PopupWindow_AddSaved">Add to saved sentences</string>
    <string name="toast_addedToSavedSentences">Added to saved sentences</string>
    <string-array name="theme_array">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="menu_item_sort">Sort</string>
    <string name="sortBy">Sort By : </string>
    <string name="chronological">Chronological</string>
    <string name="usage">Usage</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="orderBy">Order by :</string>
    <string name="ascendant">Ascendant</string>
    <string name="descendant">Descendant</string>
    <string name="textView_about_title">About</string>
    <string name="textView_about_devTitle">Developper : </string>
    <string name="textView_about_dev_members" translatable="false">Dimitri Suso</string>
    <string name="textView_about_contactTitle">Contact : </string>
    <string name="textView_about_contactEmail" translatable="false">suso.dimitri@orange.fr</string>
    <string name="textView_about_versionTitle">Version : </string>
    <string name="textView_about_version" translatable="false"><u>1.0</u></string>
    <string name="tabLayout_SavedSentences">FAVORITES</string>
    <string name="tabLayout_History">HISTORY</string>
    <string name="tabLayout_Settings">SETTINGS</string>
    <string name="textView_Settings_AccentColor">Color</string>
    <string name="button_Settings_Buy">Buy</string>
    <string name="firstBoot_SavedSentence_1">Thank you for using my application</string>
    <string name="firstBoot_SavedSentence_2">Here are all your saved sentences</string>
    <string name="firstBoot_SavedSentence_3">Swipe from right to left to see your history</string>
    <string name="firstBoot_History_1">Here are every sentences you said before, do a long press to save or delete a sentence</string>
</resources>
