<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_History_SortingPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/layout_cell_padding_left_right"
    android:paddingTop="@dimen/layout_cell_padding_top_bottom"
    android:paddingEnd="@dimen/layout_cell_padding_left_right"
    android:paddingBottom="@dimen/layout_cell_padding_top_bottom">

    <TextView
        android:id="@+id/textView_History_SortBy"
        style="?textSettingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sortBy" />

    <RadioGroup
        android:id="@+id/radioGroup_History_SortBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_History_SortBy_Chronological"
            style="?textSettingSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?colorAccent"
            android:text="@string/chronological" />

        <RadioButton
            android:id="@+id/radioButton_History_SortBy_Usage"
            style="?textSettingSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?colorAccent"
            android:text="@string/usage" />

        <RadioButton
            android:id="@+id/radioButton_History_SortBy_Alphabetical"
            style="?textSettingSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?colorAccent"
            android:text="@string/alphabetical" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView_History_OrderBy"
        style="?textSettingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderBy" />

    <RadioGroup
        android:id="@+id/radioGroup_History_OrderBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton_History_OrderBy_Desc"
            style="?textSettingSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?colorAccent"
            android:text="@string/descendant" />

        <RadioButton
            android:id="@+id/radioButton_History_OrderBy_Asc"
            style="?textSettingSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?colorAccent"
            android:text="@string/ascendant" />

    </RadioGroup>

</LinearLayout>