<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".view.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:paddingTop="@dimen/layout_cell_margin_top_bottom">

        <LinearLayout
            android:id="@+id/layout_Settings_Volume"
            style="?layoutCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_Settings_Volume"
                style="?textSettingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_QuickSettings_Volume" />

            <SeekBar
                android:id="@+id/seekBar_Settings_Volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:max="15"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Settings_Language"
            style="?layoutCellRipple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_Settings_Language"
                style="?textSettingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_QuickSettings_Language" />

            <TextView
                android:id="@+id/textView_Settings_SelectedLanguage"
                style="?textSettingSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Settings_Voice"
            style="?layoutCellRipple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_Settings_Voice"
                style="?textSettingTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_QuickSettings_Voice" />

            <TextView
                android:id="@+id/textView_Settings_SelectedVoice"
                style="?textSettingSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Settings_Speed_Pitch"
            style="?layoutCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_Settings_Speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_Settings_Speed"
                    style="?textSettingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_QuickSettings_Speed" />

                <SeekBar
                    android:id="@+id/seekBar_Settings_Speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:max="300"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Settings_Pitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_Settings_Pitch"
                    style="?textSettingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/textView_QuickSettings_Pitch" />

                <SeekBar
                    android:id="@+id/seekBar_Settings_Pitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:max="300"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_Settings_TestReset"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_Settings_Test"
                    style="?button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_Settings_Test" />

                <Button
                    android:id="@+id/button_Settings_Reset"
                    style="?button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_Settings_Reset" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Settings_TalkMode"
            style="?layoutCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_Settings_TalkMode"
                    style="?textSettingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_QuickSettings_TalkMode" />

                <TextView
                    android:id="@+id/textView_Settings_TalkMode_Description"
                    style="?textSettingSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/textView_QuickSettings_TalkMode_Description" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_Settings_TalkMode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_Settings_Theme"
            style="?layoutCellRipple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView_Settings_Theme"
                style="?textSettingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textView_Settings_Theme" />

            <TextView
                android:id="@+id/textView_Settings_SelectedTheme"
                style="?textSettingSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:paddingTop="4dp"
                android:paddingBottom="4dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_Settings_ClearSavedSentences"
            style="?button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Settings_ClearSavecSentences" />

        <Button
            android:id="@+id/button_Settings_ClearHistory"
            style="?button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Settings_ClearHistory" />


    </LinearLayout>
</ScrollView>