<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".View.QuickSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/layout_QuickSettings_Volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView_QuickSettings_Volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_QuickSettings_Volume" />

            <SeekBar
                android:id="@+id/seekBar_QuickSettings_Volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="15"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_QuickSettings_Language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="auto"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textView_QuickSettings_Language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_QuickSettings_Language" />

            <TextView
                android:id="@+id/textView_QuickSettings_SelectedLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_QuickSettings_Speed_Pitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:id="@+id/layout_QuickSettings_Speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_QuickSettings_Speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_QuickSettings_Speed" />

                <SeekBar
                    android:id="@+id/seekBar_QuickSettings_Speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="300" />
            </LinearLayout>

            <View
                android:id="@+id/divider_QuickSettings_Speed_Pitch"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:background="#444444" />

            <LinearLayout
                android:id="@+id/layout_QuickSettings_Pitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_QuickSettings_Pitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_QuickSettings_Pitch" />

                <SeekBar
                    android:id="@+id/seekBar_QuickSettings_Pitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="300" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/border"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_QuickSettings_TalkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_QuickSettings_TalkMode" />

                <TextView
                    android:id="@+id/textView_QuickSettings_TalkMode_Description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_QuickSettings_TalkMode_Description" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch_QuickSettings_TalkMode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Button
            android:id="@+id/button_QuickSettings_MoreSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/border"
            android:text="@string/textView_QuickSettings__MoreSettings" />


    </LinearLayout>
</ScrollView>